GP3 Blender crash when layer added to group #113740

Closed
opened 2023-10-15 13:17:42 +02:00 by Mohamed · 3 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 511.65

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-13 13:40, hash: 4050b0d6dfdb

Short description of error
Blender crash when layer is dragged to group.

Exact steps for others to reproduce the error
With GP3.0 enabled, add a new GP object, add a layer group in the layers panel and drag one of the layers on top of the group.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 511.65 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-13 13:40, hash: `4050b0d6dfdb` **Short description of error** Blender crash when layer is dragged to group. **Exact steps for others to reproduce the error** With GP3.0 enabled, add a new GP object, add a layer group in the layers panel and drag one of the layers on top of the group.
Mohamed added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-10-15 13:17:42 +02:00
Member

Yes, can confirm the crash

Yes, can confirm the crash
Pratik Borhade added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-10-15 14:37:49 +02:00
Falk David added this to the Grease Pencil project 2023-10-15 14:54:25 +02:00
Member

I also get an assert hit in debug build.
From a quick look, could it be due to find_layer_insertion_index calculating wrong destination index?

I also get an assert hit in debug build. From a quick look, could it be due to `find_layer_insertion_index` calculating wrong destination index?
Contributor

I was asked in chat to confirm this, and indeed I also get this crash. Here's the environment where I tested it:
Operating system: macOS-13.6-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M2 Max 1.2
Blender version: 4.1.0 Alpha, branch: main, commit date: 2023-10-17 15:46, hash: 25c2b17266c

And I've attached the stack trace in case that's helpful

I was asked in chat to confirm this, and indeed I also get this crash. Here's the environment where I tested it: Operating system: macOS-13.6-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M2 Max 1.2 Blender version: 4.1.0 Alpha, branch: main, commit date: 2023-10-17 15:46, hash: `25c2b17266c` And I've attached the stack trace in case that's helpful
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-17 18:34:53 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113740
No description provided.